Announce feature category tag add and desplay data

--- a/src/app/pages/dashboards/default/default.component.html
+++ b/src/app/pages/dashboards/default/default.component.html
@@ -12,5 +12,16 @@
             </div>
         </div>
     </div>
+    <div class="jumbotron mt-5">
+      <h1 class="display-4">Bienvenue sur la Plateforme de Gestion des Annonces Multi-Domaines</h1>
+      <p class="lead">Notre projet vise à fournir une solution en ligne pour la publication et la gestion d'annonces dans divers domaines.</p>
+      <hr class="my-4">
+      <h3>Objectifs du Projet</h3>
+      <ul>
+        <li>Permettre aux utilisateurs de publier des annonces dans différentes catégories.</li>
+        <li>Offrir une interface conviviale pour la création, la modification et la suppression d'annonces.</li>
+        <li>Faciliter la recherche et la consultation des annonces pour les visiteurs.</li>
+      </ul>
+    </div>
     <!-- end page title -->
 </div> <!-- container-fluid -->
