--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -8,7 +8,7 @@
                 <div class="col-7">
                   <div class="text-primary p-4">
                     <h5 class="text-primary">Welcome Back !</h5>
-                    <p>Sign in to continue to Skote.</p>
+                    <p>Sign in to continue to AdifyHub.</p>
                   </div>
                 </div>
                 <div class="col-5 align-self-end">
@@ -28,7 +28,9 @@
               </div>
               <div class="p-2">
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
+                      <ngb-alert *ngIf="error" type="danger" role="alert">
+                        {{ error }}
+                      </ngb-alert>
                         <div class="mb-3">
                             <label for="email">Email</label>
                             <input type="email" class="form-control" id="email" formControlName="email"
@@ -48,7 +50,7 @@
                             </div>
                             <label for="userpassword">Password</label>
                             <div class="input-group auth-pass-inputgroup">
-                                <input type="password" class="form-control" formControlName="password"
+                                <input type="password" id="userpassword" class="form-control" formControlName="password"
                                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                                     placeholder="Enter password" aria-label="Password"
                                     aria-describedby="password-addon">
@@ -99,7 +101,7 @@
 
                     </form>
               </div>
-  
+
             </div>
           </div>
           <div class="mt-5 text-center">
@@ -108,11 +110,11 @@
               </a> </p>
               <p>© {{year}} . Crafted with <i class="mdi mdi-heart text-danger"></i> by MATI</p>
           </div>
-  
+
         </div>
       </div>
     </div>
-  
+
     <!-- end container -->
   </div>
   <!-- end page -->
